<resources>
    <string name="app_name">Blog App</string>
    <string name="blog_feed">Blog Feed</string>
    <string name="search_articles">Search articles&#8230;</string>
    <string name="app_logo_text">Blog.</string>
    <string name="welcome_subtitle">Share your story with the world.</string>
    <string name="login">Login</string>
    <string name="new_here">New Here?</string>
    <string name="register">Register</string>
    <string name="powered_by">Powered by neatroots</string>
    <string name="default_user_name">New Blogger</string>
    <string name="default_date">Jul 29, 2022</string>
    <string name="default_blog_title">Please Start Writing Better Git Commits</string>
    <string name="default_blog_description">I recently read a helpful article on Hashnode by Simon Egersand titled Write Git Commit Messages Your Colleagues Will Love&#8230;</string>
    <string name="read_more">Read More</string>
    <string name="read">Read</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="your_articles">Your Articles</string>
    <string name="create_new_post">Create New Post</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="hint_title">Give your story a title</string>
    <string name="hint_description">Tell your story&#8230;</string>
    <string name="publish_post">Publish Post</string>
    <string name="profile_user_name_placeholder">User Name</string>
    <string name="add_new_article">Add new article</string>
    <string name="log_out">Log out</string>
    <string name="blog_title_placeholder">Blog Title</string>
    <string name="author_name_placeholder">Author Name</string>
    <string name="date_placeholder">Date</string>
    <string name="blog_content_placeholder">Blog Content</string>
    <string name="sign_in_subtitle">Share your story with us.</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    <string name="full_name">Full Name</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="edit_blog_title">Edit Your Blog</string>
    <string name="save_blog">Save Blog</string>
    <string name="saved_articles">Saved Articles</string>
    <string name="no_blogs_yet">No blogs yet. Be the first to write one!</string>
    <string name="no_saved_articles">No saved articles yet.</string>
    <string name="no_articles_yet">You haven\'t written any articles yet.</string>
    <string name="delete_blog_confirm">Are you sure you want to delete this blog post? This action cannot be undone.</string>
    <string name="delete_blog_title">Delete Blog Post</string>
    <string name="cancel">Cancel</string>
    <string name="delete_caps">DELETE</string>
    <string name="refresh_error">Failed to refresh. Pull down to try again.</string>
</resources>